--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#contact" class="btn">Hire Me</a>
     </div>
     <div class="home-img">
-      <img src="assets/photo-profile.png" alt="profile">
+      <img src="photo-profile.png" alt="profile">
     </div>
   </section>
 
@@ -71,31 +71,31 @@
   <div class="skills-container">
 
     <div class="skill-card">
-      <img src="assets/ms-logo.png" alt="Microsoft Office" class="skill-icon">
+      <img src="ms-logo.png" alt="Microsoft Office" class="skill-icon">
       <h3>Computer Operator</h3>
       <p>Microsoft Office (Word, Excel, PowerPoint) to simplify administrative tasks.</p>
     </div>
 
     <div class="skill-card">
-      <video src="assets/canva-logo.mp4" class="skill-icon" width="100" height="100" autoplay loop muted></video>
+      <video src="canva-logo.mp4" class="skill-icon" width="100" height="100" autoplay loop muted></video>
       <h3>Graphic Design</h3>
       <p>Creating posters and visual content that enhance communication and deliver messages effectively and professionally.</p>
     </div>
 
     <div class="skill-card">
-      <img src="assets/capcut-logo.png" alt="Video Editing" class="skill-icon">
+      <img src="capcut-logo.png" alt="Video Editing" class="skill-icon">
       <h3>Video Editing</h3>
       <p>Editing short videos to make content production</p>
     </div>
 
     <div class="skill-card">
-      <img src="assets/ai-logo.png" alt="AI User" class="skill-icon">
+      <img src="ai-logo.png" alt="AI User" class="skill-icon">
       <h3>AI User</h3>
       <p>Leveraging AI to optimize workflows, speed up task completion, and improve overall efficiency.</p>
     </div>
 
     <div class="skill-card">
-      <img src="assets/htmlcss-logo.png" alt="HTMLCSS" class="skill-icon">
+      <img src="htmlcss-logo.png" alt="HTMLCSS" class="skill-icon">
       <h3>HTML & CSS</h3>
       <p>Create a simple static web pages and apply basic CSS styling.</p>
     </div>
@@ -130,24 +130,24 @@ Ensure students throughout the semester receive timely and accurate information 
   <div class="card-grid">
     <div class="row">
       <div class="card">
-        <img src="assets/revou-certification.jpg" alt="Software Engineering Certificate">
+        <img src="revou-certification.jpg" alt="Software Engineering Certificate">
         <h3>Intro to Software Engineering</h3>
         <p>RevoU - 2024</p>
       </div>
       <div class="card">
-        <img src="assets/myskill-certificate.jpg" alt="Artificial Intelligence Certificate">
+        <img src="myskill-certificate.jpg" alt="Artificial Intelligence Certificate">
         <h3>Artificial Intelligence</h3>
         <p>MySkill - 2024</p>
       </div>
       <div class="card">
-        <img src="assets/computer-certificate.jpg" alt="LKP Certificate">
+        <img src="computer-certificate.jpg" alt="LKP Certificate">
         <h3>Graphic Design & Computer Operator</h3>
         <p>LKP Tunas Bangsa - 2020</p>
       </div>
     </div>
     <div class="row">
       <div class="card">
-        <img src="assets/bnsp-certificate.jpg" alt="BNSP Certificate">
+        <img src="bnsp-certificate.jpg" alt="BNSP Certificate">
         <h3>Junior Graphic Designer</h3>
         <p>Indonesian Professional Certificate Authority (BNSP) - 2020</p>
       </div>
@@ -190,3 +190,4 @@ Ensure students throughout the semester receive timely and accurate information 
 </script>
 </body>
 </html>
+
