--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="home-text">
       <h1>Assalamu'alaikum.</h1>
       <h2>Hi, I'm Syinfa Fatwa</h2>
-      <p>Welcome to my personal website</p>
+      <p>Welcome to my Personal Website. Here, you’ll find my skills, experiences, and more.</p>
       <a href="#contact" class="btn">Hire Me</a>
     </div>
     <div class="home-img">
@@ -190,4 +190,5 @@ Ensure students throughout the semester receive timely and accurate information 
 </script>
 </body>
 </html>
+
 
