--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="home-text">
       <h1>Assalamu'alaikum.</h1>
       <h2>Hi, I'm Syinfa Fatwa</h2>
-      <p>Welcome to my Personal Website. Here, you’ll find my skills, experiences, and more.</p>
+      <p>I enjoy learning new things, and I’m delighted whenever I discover something new on my learning journey.</p>
       <a href="#contact" class="btn">Hire Me</a>
     </div>
     <div class="home-img">
@@ -44,7 +44,7 @@
   <section id="about" class="about-section">
     <h2 class="section-title fade-in delay-1">About Me</h2>
     <p>
-      I'm Syinfa Fatwa, a highly organized and detail-oriented individual with a systematic approach to work. Skilled at maintaining accuracy and structure to ensure efficient and well-organized outcomes.
+I'm a highly organized and detail-oriented individual with a systematic approach to work. Skilled at maintaining accuracy and structure to ensure efficient and well-organized outcomes.
     </p>
   </section>
 
@@ -97,7 +97,7 @@
     <div class="skill-card">
       <img src="htmlcss-logo.png" alt="HTMLCSS" class="skill-icon">
       <h3>HTML & CSS</h3>
-      <p>Create a simple static web pages and apply basic CSS styling.</p>
+      <p>Create a simple static web page and apply basic CSS styling.</p>
     </div>
   </div>
 </section>
@@ -109,7 +109,7 @@
     <div class="card fade-in delay-2" style="background: whitesmoke; color: black;">
       <i class="fas fa-paint-brush" style="font-size: 2rem; margin-bottom: 10px;"></i>
       <h3>Graphic Design Volunteer</h3>
-      <span style="font-weight:600; color: gray;">Juni 2025 - Present</span>
+      <span style="font-weight:600; color: gray;">Juny 2025 - Present</span>
       <p>Create various visual designs, such as posters, for organizational purposes. Collaborate with the media team to ensure designs align with the organization's visual identity and message.<br>
       </p>
     </div>
@@ -190,5 +190,6 @@ Ensure students throughout the semester receive timely and accurate information 
 </script>
 </body>
 </html>
+
 
 
